2009-09-08  Nicolas François  <nicolas.francois@centraliens.net>

	* src/su.c: Fix indentation.
	* src/su.c: Add more messages for translation.
	* src/su.c: Ignore kill() return value when sending the TERM
	signal. If it fails, a KILL should be sent anyway.

2009-09-08  Nicolas François  <nicolas.francois@centraliens.net>

	* NEWS, src/su.c: When su receives a signal, wait for the child to
	terminate (after sending a SIGTERM), and kill it only if it did
	not terminate by itself. No delay will be enforced if the child
	cooperates. See http://bugs.gentoo.org/282094
	* NEWS, man/su.1.xml: Document su's exit values.

2009-09-08  Nicolas François  <nicolas.francois@centraliens.net>

	* src/useradd.c: The default value for the CREATE_MAIL_SPOOL
	variable (i.e. if CREATE_MAIL_SPOOL= is specified without any
	values) is "no", not DCREATE_MAIL_SPOOL ("CREATE_MAIL_SPOOL=").

2009-09-08  Nicolas François  <nicolas.francois@centraliens.net>

	* src/useradd.c: Avoid redefinition of SHELL. Use DSHELL instead.
	For consistency, change HOME, INACT, EXPIRE, SKEL, and
	CREATE_MAIL_SPOOL to DHOME, DINACT, DEXPIRE, DSKEL, and
	DCREATE_MAIL_SPOOL.

2009-09-08  Nicolas François  <nicolas.francois@centraliens.net>

	* src/newusers.c: Prefer #ifdef over #if.

2009-09-08  Nicolas François  <nicolas.francois@centraliens.net>

	* configure.in: We do not use SETPGRP_VOID, and already assume
	that setpgrp has a void argument. Remove AC_FUNC_SETPGRP to ease
	cross compiling.

2009-09-07  Nicolas François  <nicolas.francois@centraliens.net>

	* man/generate_translations.mak, man/generate_mans.mak,
	po/Makefile.in.in: Removing and restoring the config.xml file
	broke parallel builds. Build the manpages based on *.xml-config
	files instead of *.xml files.  The *.xml do not include config.xml
	anymore, which permits to run xml2po without needing to remove
	config.xml. The config.xml is restored in the *.xml-config files.
	* man/groupadd.8.xml: Implementation of the above.